static/css/theme-mine.css
:root {
  --MAIN-TEXT-color: #252525; /* Color of text by default */
  --MAIN-TITLES-TEXT-color: #1cad95; /* Color of titles h2-h3-h4-h5 */
  --MAIN-LINK-color: #138f7a; /* Color of links */
  --MAIN-LINK-HOVER-color: #0b5f51; /* Color of hovered links */
  --MAIN-ANCHOR-color: #1cad95; /* color of anchors on titles */

  --MENU-HEADER-BG-color: #404040; /* Background color of menu header */
  --MENU-HEADER-BORDER-color: #69dbc8; /*Color of menu header border */

  --MENU-SEARCH-BG-color: #1cad95; /* Search field background color (by default borders + icons) */
  --MENU-SEARCH-BOX-color: #6cdac8; /* Override search field border color */
  --MENU-SEARCH-BOX-ICONS-color: #ffffff; /* Override search field icons color */

  --MENU-SECTIONS-ACTIVE-BG-color: #18211c; /* Background color of the active section and its children */
  --MENU-SECTIONS-BG-color: #222723; /* Background color of other sections */
  --MENU-SECTIONS-LINK-color: #ccc; /* Color of links in menu */
  --MENU-SECTIONS-LINK-HOVER-color: #e6e6e6; /* Color of links in menu, when hovered */
  --MENU-SECTION-ACTIVE-CATEGORY-color: #70e4d0; /* Color of active category text */
  --MENU-SECTION-ACTIVE-CATEGORY-BG-color: #404040; /* Color of background for the active category (only) */

  --MENU-VISITED-color: #1cad95; /* Color of 'page visited' icons in menu */
  --MENU-SECTION-HR-color: #151515; /* Color of <hr> separator in menu */
}

body {
  color: var(--MAIN-TEXT-color) !important;
}

textarea:focus,
input[type="email"]:focus,
input[type="number"]:focus,
input[type="password"]:focus,
input[type="search"]:focus,
input[type="tel"]:focus,
input[type="text"]:focus,
input[type="url"]:focus,
input[type="color"]:focus,
input[type="date"]:focus,
input[type="datetime"]:focus,
input[type="datetime-local"]:focus,
input[type="month"]:focus,
input[type="time"]:focus,
input[type="week"]:focus,
select[multiple="multiple"]:focus {
  border-color: none;
  box-shadow: none;
}

h2,
h3,
h4,
h5 {
  color: var(--MAIN-TITLES-TEXT-color) !important;
}

a {
  color: var(--MAIN-LINK-color);
}

.anchor {
  color: var(--MAIN-ANCHOR-color);
}

a:hover {
  color: var(--MAIN-LINK-HOVER-color);
}

#sidebar ul li.visited > a .read-icon {
  color: var(--MENU-VISITED-color);
}

#body a.highlight:after {
  display: block;
  content: "";
  height: 1px;
  width: 0%;
  -webkit-transition: width 0.5s ease;
  -moz-transition: width 0.5s ease;
  -ms-transition: width 0.5s ease;
  transition: width 0.5s ease;
  background-color: var(--MAIN-LINK-HOVER-color);
}
#sidebar {
  background-color: var(--MENU-SECTIONS-BG-color);
}
#sidebar #header-wrapper {
  background: var(--MENU-HEADER-BG-color);
  color: var(--MENU-SEARCH-BOX-color);
  border-color: var(--MENU-HEADER-BORDER-color);
}
#sidebar .searchbox {
  border-color: var(--MENU-SEARCH-BOX-color);
  background: var(--MENU-SEARCH-BG-color);
}
#sidebar ul.topics > li.parent,
#sidebar ul.topics > li.active {
  background: var(--MENU-SECTIONS-ACTIVE-BG-color);
}
#sidebar .searchbox * {
  color: var(--MENU-SEARCH-BOX-ICONS-color);
}

#sidebar a {
  color: var(--MENU-SECTIONS-LINK-color);
}

#sidebar a:hover {
  color: var(--MENU-SECTIONS-LINK-HOVER-color);
}

#sidebar ul li.active > a {
  background: var(--MENU-SECTION-ACTIVE-CATEGORY-BG-color);
  color: var(--MENU-SECTION-ACTIVE-CATEGORY-color) !important;
}

#sidebar hr {
  border-color: var(--MENU-SECTION-HR-color);
}

 table {
  table-layout: auto;
} 
/* 
td {
  border: 1px solid #000;
} */


tr td:first-child {
  width: 15%;
} 

tr td {
  width: auto;
} 

.column-same-width:first-child{
  width: auto;
}

